# SearchEnigne

./: .gitignore  CMakeLists.txt  README.md
include/: AlertData.h  AlertModel.h  CMakeLists.txt  ConverterJSON.h  DialogFinder.h  InvertedIndex.h  JsonGuard.h  SearchHandler.h  SearchServer.h  globals.h  myWindowListModel.h
jsonFiles/: answers.json  config.json  requests.json  test.json
resources/: file001.txt  file002.txt  file003.txt  icons.qrc
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  JsonGuard.cpp  SearchServer.cpp  globals.cpp  main.cpp
src/cpp/: AlertData.cpp  AlertModel.cpp  CMakeLists.txt  ConverterJSON.cpp  DialogFinder.cpp  InvertedIndex.cpp  JsonGuard.cpp  SearchHandler.cpp  SearchServer.cpp  globals.cpp  main.cpp  myWindowListModel.cpp
src/qml/: MyButton.qml  MyButtonWithIcon.qml  MyWindow.qml  SearchButton.qml  main.qml  main.qml.autosave  qml.qrc
tests/: CMakeLists.txt  ConverterJSONTest.cpp  InvertedIndexTest.cpp  SearchServerTest.cpp
tests/testJsonFiles/: config.json  requests.json
tests/testResources/checkSubdirs/subdir1/subdir2/: text.txt
tests/testResources/dontCheckSubdirs/subdir/: textInSubdir.txt
